--- a/app/src/main/res/layout/call_center_home.xml
+++ b/app/src/main/res/layout/call_center_home.xml
@@ -261,7 +261,59 @@
                 </com.google.android.material.card.MaterialCardView>
                 <!-- Row 2 -->
 
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/chatCard"
+                    android:layout_width="0dp"
+                    android:layout_height="133dp"
+                    android:layout_columnWeight="1"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="19dp"
+                    android:layout_rowWeight="1"
+                    app:cardCornerRadius="5dp"
+                    android:layout_marginEnd="@dimen/_7sdp"
 
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        >
+
+                        <ImageView
+                            android:id="@+id/chatImage"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:layout_width="50dp"
+                            android:tint="@color/black"
+                            android:layout_height="50dp"
+                            app:srcCompat="@drawable/ic_email"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/chatText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="center"
+                            android:gravity="center"
+                            android:fontFamily="@font/ffshamelfamily_sansonebold"
+                            android:textStyle="bold"
+                            android:textSize="14sp"
+                            android:textColor="@color/textColor"
+                            android:text="@string/chat"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginBottom="10dp"
+                            />
+
+
+
+
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
             </GridLayout>
 
 
