--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -487,7 +487,7 @@
                     android:layout_width="0dp"
                     android:id="@+id/deliveryCard"
                     android:layout_height="133dp"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     app:cardCornerRadius="5dp"
