--- a/app/src/main/res/layout/delivery_details_fragment.xml
+++ b/app/src/main/res/layout/delivery_details_fragment.xml
@@ -45,7 +45,7 @@
             android:textColor="@color/textColor"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:text="أمر توصيل رقم 135655"
+            android:text=""
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/price"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/deliverCurrancy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="رس"
+            android:text=""
             android:layout_marginEnd="@dimen/_24sdp"
             android:textSize="12sp"
             android:textColor="@color/textColor"
@@ -68,7 +68,7 @@
             android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1000"
+            android:text=""
             android:textStyle="bold"
             android:fontFamily="@font/ffshamelfamily_sansonebold"
             android:textSize="15sp"
@@ -88,7 +88,7 @@
             android:layout_marginStart="@dimen/_24sdp"
             android:textColor="@color/text_black"
             android:layout_marginTop="@dimen/_5sdp"
-            android:text="سامسونغ غالاكسي إس"
+            android:text=""
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/pieceCount"
             app:layout_constraintTop_toBottomOf="@+id/deliveryNumb" />
@@ -109,7 +109,7 @@
             android:id="@+id/pieceCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2"
+            android:text=""
             android:textColor="@color/text_black"
             android:textStyle="bold"
             android:textSize="15sp"
@@ -132,7 +132,7 @@
         android:layout_marginStart="@dimen/_24sdp"
         android:layout_marginEnd="@dimen/_24sdp"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_60sdp"
+        android:layout_height="@dimen/_80sdp"
         app:cardElevation="5dp"
         app:layout_constraintTop_toBottomOf="@+id/orderTopDetailsContainer"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +141,7 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
@@ -215,6 +216,138 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            >
+
+
+            <TextView
+                android:visibility="gone"
+                android:textAlignment="viewStart"
+                android:layout_marginStart="@dimen/_14sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:id="@+id/storeName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="مخزن الكترونيات / متجر 1"
+                app:layout_constraintEnd_toStartOf="@+id/title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_marginTop="@dimen/_7sdp"
+                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/classification"
+                android:textStyle="bold"
+                android:fontFamily="@font/ffshamelfamily_sansonebold"
+                android:textColor="@color/black_bold"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="@dimen/_10sdp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <LinearLayout
+                android:layout_marginTop="@dimen/_10sdp"
+                android:id="@+id/classifyNameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                app:layout_constraintEnd_toEndOf="parent"
+                >
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/circleColor"
+                    android:layout_width="10dp"
+                    android:layout_height="11dp"
+                    android:layout_marginStart="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:src="@color/orange_color"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/date" />
+
+                <TextView
+                    android:id="@+id/itemCategoryName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:textColor="@color/black_bold"
+                    android:text=""
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/circleColored"
+                    app:layout_constraintTop_toBottomOf="@+id/date" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/classifyStoreLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toStartOf="@+id/classifyQuantityLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/classifyNameLayout"
+                >
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="10dp"
+                    android:layout_height="11dp"
+                    android:layout_marginStart="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:src="@color/orange_color"
+                    />
+
+                <TextView
+                    android:id="@+id/itemStoreName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:textColor="@color/black_bold"
+                    android:text=" "
+                    android:textSize="12sp"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/classifyQuantityLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginEnd="@dimen/_10sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/classifyStoreLayout"
+                app:layout_constraintTop_toBottomOf="@+id/classifyNameLayout"
+                >
+
+                <TextView
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black_bold"
+                    android:text="@string/quantity"
+                    android:textSize="12sp"
+                    />
+
+                <TextView
+                    android:id="@+id/itemStoreQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black_bold"
+                    android:text=""
+                    android:textSize="12sp"
+                    />
+            </LinearLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
     </com.google.android.material.card.MaterialCardView>
 
 
@@ -265,7 +398,7 @@
                         android:textColor="@color/black_bold"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="سامسونغ غالاكسي إس"
+                        android:text=""
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -274,7 +407,7 @@
                         android:id="@+id/priceCard"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="475"
+                        android:text=""
                         android:textSize="15sp"
                         android:layout_marginStart="@dimen/_14sdp"
                         android:textColor="@color/black_bold"
@@ -290,17 +423,19 @@
                         android:textSize="12sp"
                         android:layout_marginStart="@dimen/_4sdp"
                         android:textColor="@color/text_grey"
-                        android:text="رس"
+                        android:text=""
                         app:layout_constraintTop_toBottomOf="@+id/nameCard"
                         app:layout_constraintStart_toEndOf="@+id/priceCard"
                         />
 
                     <ImageView
+                        android:id="@+id/imageProduct"
                         android:layout_marginBottom="@dimen/_5sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/currancyCard"
-                        android:src="@drawable/image_samsung"
+                        android:src="@color/grey_bg"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:scaleType="centerCrop"
                         android:layout_width="@dimen/_100sdp"
@@ -322,6 +457,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="5dp"
+                app:contentPaddingTop="@dimen/_10sdp"
+                app:contentPaddingBottom="@dimen/_14ssp"
                 >
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -356,7 +493,7 @@
                     android:id="@+id/statusTextValues"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/waiting"
+                    android:text=""
                     android:layout_marginStart="@dimen/_3sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
@@ -367,10 +504,8 @@
                     app:layout_constraintTop_toTopOf="@id/statusImageOrder"
 
                     />
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:src="@drawable/ic_img_placeholer_side"
-                    app:civ_border_width="1dp"
-                    app:civ_border_color="#166e6e6e"
+                <ImageView
+                    app:srcCompat="@drawable/ic_img_placeholer_side"
                     android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintTop_toBottomOf="@+id/statusImageOrder"
                     app:layout_constraintStart_toStartOf="parent"
@@ -384,7 +519,7 @@
                     app:layout_constraintStart_toEndOf="@+id/userImage"
                     app:layout_constraintTop_toTopOf="@+id/userImage"
                     android:id="@+id/userNameText"
-                    android:text="Abdelrahman Salah"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"/>
 
@@ -392,7 +527,7 @@
                     app:layout_constraintStart_toStartOf="@+id/userNameText"
                     app:layout_constraintTop_toBottomOf="@+id/userNameText"
                     android:id="@+id/phoneNumberText"
-                    android:text="+201286617935"
+                    android:text=""
                     android:textColor="@color/text_black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -475,13 +610,13 @@
                             android:id="@+id/mapAddress"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="الرياض ، عاصمة المملكة العربية السعودية " />
+                            android:text="" />
 
                         <TextView
                             android:id="@+id/mapName"
                             android:layout_width="0dp"
                             android:layout_height="26dp"
-                            android:text="احمد بن صالح الشامي"
+                            android:text=""
                             android:textSize="14sp"
                             android:textStyle="bold"
                             android:fontFamily="@font/ffshamelfamily_sansonebold"
@@ -496,7 +631,7 @@
                             android:id="@+id/mapPhone"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text=" +966 00000 0000"
+                            android:text=""
                             android:textSize="14sp"
                             android:textStyle="bold"
                             android:fontFamily="@font/ffshamelfamily_sansonebold"
@@ -512,7 +647,7 @@
                             android:id="@+id/mapEmail"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="trose@buzzbean.info"
+                            android:text=""
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:layout_marginBottom="@dimen/_10sdp"
                             android:textSize="14sp"
@@ -580,7 +715,7 @@
                             android:id="@+id/feeCurrancy"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="رس"
+                            android:text=""
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:textColor="@color/login_gray"
@@ -591,7 +726,7 @@
                             android:id="@+id/feePrice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="1.200 "
+                            android:text=""
                             android:layout_marginEnd="@dimen/_4sdp"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -632,7 +767,7 @@
                             android:id="@+id/shippingCurrancy"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="رس"
+                            android:text=""
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:textColor="@color/login_gray"
@@ -643,7 +778,7 @@
                             android:id="@+id/shippingPrice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="1000"
+                            android:text=""
                             android:layout_marginEnd="@dimen/_4sdp"
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -686,7 +821,7 @@
                             android:id="@+id/totalPriceCurrancy"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="رس"
+                            android:text=""
                             android:textSize="12sp"
                             android:layout_marginEnd="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -698,7 +833,7 @@
                             android:id="@+id/totalPricePrice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="1000"
+                            android:text=""
                             android:layout_marginEnd="@dimen/_4sdp"
                             android:textSize="15sp"
                             app:layout_constraintBottom_toBottomOf="parent"
